// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Type Section adds empty function types 1`] = `
Module {
  "exports": Array [],
  "functions": Array [],
  "globals": Array [],
  "imports": Array [],
  "memories": Array [],
  "tables": Array [],
  "types": Array [
    FunctionType {
      "paramTypes": Array [],
      "returnTypes": Array [],
      "type": 96,
    },
  ],
  "version": 1,
}
`;

exports[`Type Section adds empty function types 2`] = `
Uint8Array [
  0,
  97,
  115,
  109,
  1,
  0,
  0,
  0,
  1,
  4,
  1,
  96,
  0,
  0,
]
`;

exports[`Type Section adds empty function types 3`] = `
Module {
  "exports": Array [],
  "functions": Array [],
  "globals": Array [],
  "imports": Array [],
  "memories": Array [],
  "tables": Array [],
  "types": Array [
    FunctionType {
      "paramTypes": Array [],
      "returnTypes": Array [],
      "type": 96,
    },
    FunctionType {
      "paramTypes": Array [],
      "returnTypes": Array [],
      "type": 96,
    },
  ],
  "version": 1,
}
`;

exports[`Type Section adds empty function types 4`] = `
Uint8Array [
  0,
  97,
  115,
  109,
  1,
  0,
  0,
  0,
  1,
  7,
  2,
  96,
  0,
  0,
  96,
  0,
  0,
]
`;

exports[`Type Section adds function types with parameters 1`] = `
Module {
  "exports": Array [],
  "functions": Array [],
  "globals": Array [],
  "imports": Array [],
  "memories": Array [],
  "tables": Array [],
  "types": Array [
    FunctionType {
      "paramTypes": Array [
        127,
      ],
      "returnTypes": Array [],
      "type": 96,
    },
  ],
  "version": 1,
}
`;

exports[`Type Section adds function types with parameters 2`] = `
Uint8Array [
  0,
  97,
  115,
  109,
  1,
  0,
  0,
  0,
  1,
  5,
  1,
  96,
  1,
  127,
  0,
]
`;

exports[`Type Section adds function types with parameters 3`] = `
Module {
  "exports": Array [],
  "functions": Array [],
  "globals": Array [],
  "imports": Array [],
  "memories": Array [],
  "tables": Array [],
  "types": Array [
    FunctionType {
      "paramTypes": Array [
        127,
      ],
      "returnTypes": Array [],
      "type": 96,
    },
    FunctionType {
      "paramTypes": Array [
        127,
        127,
      ],
      "returnTypes": Array [],
      "type": 96,
    },
  ],
  "version": 1,
}
`;

exports[`Type Section adds function types with parameters 4`] = `
Uint8Array [
  0,
  97,
  115,
  109,
  1,
  0,
  0,
  0,
  1,
  10,
  2,
  96,
  1,
  127,
  0,
  96,
  2,
  127,
  127,
  0,
]
`;

exports[`Type Section adds function types with parameters and a single return value 1`] = `
Module {
  "exports": Array [],
  "functions": Array [],
  "globals": Array [],
  "imports": Array [],
  "memories": Array [],
  "tables": Array [],
  "types": Array [
    FunctionType {
      "paramTypes": Array [
        127,
      ],
      "returnTypes": Array [
        127,
      ],
      "type": 96,
    },
  ],
  "version": 1,
}
`;

exports[`Type Section adds function types with parameters and a single return value 2`] = `
Uint8Array [
  0,
  97,
  115,
  109,
  1,
  0,
  0,
  0,
  1,
  6,
  1,
  96,
  1,
  127,
  1,
  127,
]
`;
